// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/store/process/ProcessForm default 1`] = `
<div
  style="height: 100%;"
>
  <span>
    <form
      class="p-fluid"
    >
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="label"
        >
          
      Name
    
        </label>
         
        <input
          class="p-inputtext p-component p-filled"
          id="label"
          placeholder="Enter a trigger name"
          type="text"
        />
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="url"
        >
          
      URL
    
        </label>
         
        <input
          class="p-inputtext p-component"
          id="url"
          placeholder="URL"
          type="text"
        />
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <div
        class="p-field"
      >
        <label
          for="enabled"
        >
          
      Enabled
    
        </label>
         
        <br />
         
        <div
          class="p-inputswitch p-component p-inputswitch-checked"
          id="enabled"
        >
          <div
            class="p-hidden-accessible"
          >
            <input
              aria-checked="true"
              role="switch"
              type="checkbox"
            />
          </div>
           
          <span
            class="p-inputswitch-slider"
          />
        </div>
      </div>
       
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="table"
        >
          
      Table
    
        </label>
         
        <span
          aria-haspopup="listbox"
          aria-owns="pv_id_9_list"
          class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd p-inputwrapper-filled"
          dropdown="true"
          id="table"
          placeholder="Choose a table"
          suggestions=""
          value="[object Object]"
        >
          <input
            aria-autocomplete="list"
            aria-controls="pv_id_9_list"
            autocomplete="off"
            class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"
            id="table"
            placeholder="Start typing for suggestions"
            role="searchbox"
            type="text"
          />
           
          <!---->
           
          <!---->
           
          <button
            class="p-autocomplete-dropdown p-button p-component p-button-icon-only"
            type="button"
          >
            <span
              class="pi pi-chevron-down p-button-icon"
            />
             
            <span
              class="p-button-label"
            >
               
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </span>
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="trigger"
        >
          
      Trigger
    
        </label>
         
        <div
          class="p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
          dropdown="true"
          id="trigger"
        >
          <div
            class="p-hidden-accessible"
          >
            <input
              aria-haspopup="listbox"
              readonly="readonly"
              type="text"
            />
          </div>
           
          <!---->
           
          <span
            class="p-dropdown-label p-inputtext"
          >
            
            CREATE_ROW
        
          </span>
           
          <!---->
           
          <div
            aria-haspopup="listbox"
            class="p-dropdown-trigger"
            role="button"
          >
            <span
              class="p-dropdown-trigger-icon pi pi-chevron-down"
            />
          </div>
           
          <!---->
        </div>
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <!---->
       
      <div
        class="p-field"
      >
        <label
          for="maximumNumberSuccess"
        >
          
      Maximum number of success (0 if no limit)
    
        </label>
         
        <span
          class="p-inputnumber p-component p-inputwrapper-filled"
        >
          <input
            class="p-inputtext p-component p-filled p-inputnumber-input"
            id="maximumNumberSuccess"
          />
           
          <!---->
           
          <!---->
           
          <!---->
        </span>
      </div>
       
      <div
        class="lck-form-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button p-component"
          disabled="disabled"
          type="submit"
        >
          <span
            class="pi pi-save p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Save
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </form>
  </span>
</div>
`;

exports[`storyshots components/store/process/ProcessForm submitting 1`] = `
<div
  style="height: 100%;"
>
  <span>
    <form
      class="p-fluid"
    >
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="label"
        >
          
      Name
    
        </label>
         
        <input
          class="p-inputtext p-component p-filled"
          id="label"
          placeholder="Enter a trigger name"
          type="text"
        />
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="url"
        >
          
      URL
    
        </label>
         
        <input
          class="p-inputtext p-component"
          id="url"
          placeholder="URL"
          type="text"
        />
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <div
        class="p-field"
      >
        <label
          for="enabled"
        >
          
      Enabled
    
        </label>
         
        <br />
         
        <div
          class="p-inputswitch p-component"
          id="enabled"
        >
          <div
            class="p-hidden-accessible"
          >
            <input
              role="switch"
              type="checkbox"
            />
          </div>
           
          <span
            class="p-inputswitch-slider"
          />
        </div>
      </div>
       
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="table"
        >
          
      Table
    
        </label>
         
        <span
          aria-haspopup="listbox"
          aria-owns="pv_id_10_list"
          class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd p-inputwrapper-filled"
          dropdown="true"
          id="table"
          placeholder="Choose a table"
          suggestions=""
          value="[object Object]"
        >
          <input
            aria-autocomplete="list"
            aria-controls="pv_id_10_list"
            autocomplete="off"
            class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"
            id="table"
            placeholder="Start typing for suggestions"
            role="searchbox"
            type="text"
          />
           
          <!---->
           
          <!---->
           
          <button
            class="p-autocomplete-dropdown p-button p-component p-button-icon-only"
            type="button"
          >
            <span
              class="pi pi-chevron-down p-button-icon"
            />
             
            <span
              class="p-button-label"
            >
               
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </span>
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <div
        class="p-field"
      >
        <label
          class="label-field-required"
          for="trigger"
        >
          
      Trigger
    
        </label>
         
        <div
          class="p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
          dropdown="true"
          id="trigger"
        >
          <div
            class="p-hidden-accessible"
          >
            <input
              aria-haspopup="listbox"
              readonly="readonly"
              type="text"
            />
          </div>
           
          <!---->
           
          <span
            class="p-dropdown-label p-inputtext"
          >
            
            CREATE_ROW
        
          </span>
           
          <!---->
           
          <div
            aria-haspopup="listbox"
            class="p-dropdown-trigger"
            role="button"
          >
            <span
              class="p-dropdown-trigger-icon pi pi-chevron-down"
            />
          </div>
           
          <!---->
        </div>
         
        <span
          class="untouched pristine"
        >
          
        </span>
      </div>
       
      <!---->
       
      <div
        class="p-field"
      >
        <label
          for="maximumNumberSuccess"
        >
          
      Maximum number of success (0 if no limit)
    
        </label>
         
        <span
          class="p-inputnumber p-component p-inputwrapper-filled"
        >
          <input
            class="p-inputtext p-component p-filled p-inputnumber-input"
            id="maximumNumberSuccess"
          />
           
          <!---->
           
          <!---->
           
          <!---->
        </span>
      </div>
       
      <div
        class="lck-form-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button p-component p-button-text"
          disabled="disabled"
          type="button"
        >
          <span
            class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Please wait
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </form>
  </span>
</div>
`;
